<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="16dp">

    <!-- Search Bar -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp"
        android:paddingVertical="8dp">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            tools:ignore="UselessParent">

            <EditText
                android:id="@+id/searchView"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="@drawable/background_search"
                android:drawableStart="@drawable/search_24"
                android:drawablePadding="8dp"
                android:drawableTint="@android:color/darker_gray"
                android:hint="@string/search"
                android:imeOptions="actionSearch"
                android:paddingHorizontal="12dp"
                android:singleLine="true"
                android:textColor="@android:color/darker_gray"
                android:textSize="14sp"
                android:inputType="text"
                tools:ignore="TouchTargetSizeCheck" />
        </FrameLayout>
    </LinearLayout>

    <!-- Tombol Kategori -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="10dp"
        android:paddingBottom="8dp">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnCategoryAll"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/prymary_color"
                android:text="@string/all"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCategoryNews"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/prymary_color"
                android:text="@string/News"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCategoryFood"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/prymary_color"
                android:text="@string/Food"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />

            <Button
                android:id="@+id/btnCategoryHealth"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginEnd="6dp"
                android:backgroundTint="@color/prymary_color"
                android:text="@string/Healthy"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </HorizontalScrollView>

    <!-- RecyclerView for Articles -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewArticles"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/emptyStateText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_articles_available"
            android:visibility="gone"
            android:layout_gravity="center"/>
    </LinearLayout>
</LinearLayout>
