<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_back"
        android:contentDescription="Kembali"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCapturedFood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:clipToPadding="false"
        android:scrollbars="none"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/emptyStateText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_food_detection"
        android:textColor="@color/gray_300"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnAddImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvCapturedFood" />

    <Button
        android:id="@+id/btnAddImage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/second_color"
        android:text="@string/add_image"
        android:textColor="#000"
        app:layout_constraintBottom_toTopOf="@id/btnCheckNutrition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btnCheckNutrition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/prymary_color"
        android:text="@string/nutrition_cek"
        android:textColor="#FFF"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>